# repository-harness

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PHASE2.md  PRODUCT.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.claude/: .env.example  .gitignore
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  harness-v1-diagnostic-request  pull_request_template.md
.interface-design/: system.md
.playwright-mcp/: page-2026-06-17T14-51-12-301Z.yml
crates/harness-core/: Cargo.toml
crates/harness-core/src/: application.rs  command_spec.rs  domain.rs  infrastructure.rs  interface.rs  lib.rs  main.rs  markdown.rs  path.rs  ports.rs  recovery.rs  strict_json.rs  trust.rs  unicode_casefold.rs
crates/harness-core/tests/: phase2_core.rs  phase3_recovery.rs  phase7_direct_binary.rs
crates/harness-v0-migrate/: Cargo.toml
crates/harness-v0-migrate/src/: archive.rs  capture.rs  command_spec.rs  export.rs  interface.rs  journal.rs  lib.rs  main.rs  secure_fs.rs  strict_json.rs
crates/harness-v0-migrate/tests/: phase4_bridge.rs  phase4_rejection.rs
docs/: ARCHITECTURE.md  BRAINSTORM.md  CONTEXT_RULES.md  FEATURE_INTAKE.md  GIT_WORKFLOW.md  GLOSSARY.md  HARNESS.md  HARNESS_BACKLOG.md  HARNESS_COMPONENTS.md  HARNESS_MATURITY.md  IMPACT_ANALYSIS.md  IMPROVEMENT_PROTOCOL.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  SYMPHONY_QUICKSTART.md  SYMPHONY_SCOPE.md  SYMPHONY_SPEC.md  TEST_MATRIX.md  TOOL_REGISTRY.md  TRACE_SPEC.md  VALIDATION_INTEGRITY.md  WORKFLOW.md
manual_add/: ARCHITECTURE.fixed.md  ARCHITECTURE.patch
scripts/: README.md  agent-harness-block.md  benchmark_large_dataset.py  capture-v1-build-receipt.sh  capture-v1-phase6-warm-v0.py  capture_v1_build_receipt.py  finalize_v1_build_receipt.py  harness-cli-release-tag  harness-install-files.txt  harness-release-changed.sh  harness-release-tag  install-harness-v1.ps1  install-harness-v1.sh  install-harness.ps1  install-harness.sh  prepare-v1-phase7-test-release.py  run_v1_phase7_execution_proof.py  test-install-harness-cli-upgrade.sh  v1_artifact_provenance.py  v1_build_receipt_common.py  validate-premerge.sh  validation-integrity-check.py  verify-core-state-ownership.sh  verify-harness-cli-release-identity.sh  verify-v1-build-receipts.sh  verify-v1-phase1-contracts.sh  verify-v1-phase2-core.sh  verify-v1-phase4-bridge.sh  (+18 more)
(+813 files in other folders)
