[package]
name = "harness-core"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "harness_core"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
hmac = "0.12.1"
pulldown-cmark = { version = "=0.13.4", default-features = false }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
unicode-normalization = "=0.1.25"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27.0"
